--- a/css/fotoartevideo.css
+++ b/css/fotoartevideo.css
@@ -6,17 +6,7 @@ h1,h2,h3,p{border: 0; padding: 0; margin: 0;}
 ul, ol{list-style-type: none;}
 img {max-width: 100%;height: auto;-ms-interpolation-mode: bicubic;}
 .container{width: 100%;position: relative;top: 100px;}
-#sidebar{width: 100%; display: inline-block;top:0; position:fixed; z-index:1111;/*background-color: rgba(255, 255, 255, 0.9)*/ 
-/*
-background: -moz-linear-gradient(-45deg, rgba(247,254,255,0.5) 0%, rgba(249,192,249,0.5) 100%);
-background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,rgba(247,254,255,0.5)), color-stop(100%,rgba(249,192,249,0.5)));
-background: -webkit-linear-gradient(-45deg, rgba(247,254,255,0.5) 0%,rgba(249,192,249,0.5) 100%);
-background: -o-linear-gradient(-45deg, rgba(247,254,255,0.5) 0%,rgba(249,192,249,0.5) 100%);
-background: -ms-linear-gradient(-45deg, rgba(247,254,255,0.5) 0%,rgba(249,192,249,0.5) 100%);
-background: linear-gradient(135deg, rgba(247,254,255,0.5) 0%,rgba(249,192,249,0.5) 100%);
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#80f7feff', endColorstr='#80f9c0f9',GradientType=1 );
-*/
-background-image: url('../css/img/sidebar.jpg');
+#sidebar{width: 100%; display: inline-block;top:0; position:fixed; z-index:1111; background-image: url('../css/img/sidebar.jpg');
 }
 
 .title, small, .comments-area h2, .comment-reply-title{background-color: rgba(40, 40, 40, 1);display: block; width: 100%; height: auto;line-height: inherit; font-weight: 300; }
@@ -82,6 +72,9 @@ p.attachment{ padding:0;}
 .nxpt {bottom: 0; position: fixed; width: 100%}
 .nxpt a{padding: 1em 5%; display: inline-block;width: 90%;   background-color: #fff;}
 
+.copyright-mob, .copyright{padding: 1em; position: absolute; bottom: 0; font-size: 12px; font-weight: 100; text-align: center;}
+.copyright{display: none}
+
 /* wp classes */
 .wp-caption {margin-bottom: 1.6em; max-width: 100%; }
 .wp-caption-text {color: #707070; color: rgba(51, 51, 51, 0.7); font-family: "Noto Sans", sans-serif; font-size: 12px; font-size: 1.2rem; line-height: 1.5; padding: 0.5em 0; }
@@ -101,7 +94,6 @@ input.wpcf7-form-control.wpcf7-submit{ color:#fff; width: 100%;  border: 1px sol
 
 
 /* photoMosaic */
-
 .photoMosaic{margin-bottom: 0;}
 
 @media all and (min-width: 420px) {
@@ -125,9 +117,12 @@ section { width: 50%; }
 .menu li a:before {  content: ""; position: absolute; z-index: -1; top: 0; bottom: 0; left: 0; right: 0; background-color: rgba(40, 40, 40, 1); -webkit-transform: scaleY(0); transform: scaleY(0); -webkit-transform-origin: 50%; transform-origin: 50%; -webkit-transition-property: transform; transition-property: transform; -webkit-transition-duration: 0.3s; transition-duration: 0.3s; -webkit-transition-timing-function: ease-out; transition-timing-function: ease-out; }
 .menu li a:hover, .menu li a:focus, .menu li a:active {  color: white;  }
 .menu li a:hover:before, .menu li a:focus:before, .menu li a:active:before { -webkit-transform: scaleY(1);  transform: scaleY(1); }
+.copyright{display:block;width: 100%; padding: 1em 0;}
 }
 #menu-social .menu li a{background-color: none;}
 #menu-social li a:before, #menu-social li a:hover, #menu-social li a:focus, #menu-social li a:active, #menu-social li a:hover:before, #menu-social li a:focus:before, #menu-social li a:active:before{;background-color: rgba(255, 255, 255, 0);}
+
+
 /* IE */
 .ie .hamburger-checkbox, .ie .hamburger-label{display:none}
 .ie .browserupgrade{background: #f00;color: black;text-align:center;height:50px; line-height:50px;position:fixed;width:100%; display:inline-block; z-index:9999;}
